Fixes to make hadoop mesos work with 1.0.4 on EC2 1. Change pom.xml versions 2. Use writeXml interface with a OuputStream 3. Don't override job tracker address

--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,8 @@
 
         <!-- runtime deps versions -->
         <commons-logging.version>1.1.1</commons-logging.version>
-        <hadoop-core.version>1.2.0</hadoop-core.version>
-        <mesos.version>0.14.0-20130806</mesos.version>
+        <hadoop-core.version>1.0.4</hadoop-core.version>
+        <mesos.version>0.15</mesos.version>
         <protobuf.version>2.4.1</protobuf.version>
 
         <!-- test deps versions -->
